# wavi

./: .gitignore  Cargo.toml
core/src/: editor.rs  lib.rs
extensions/: Cargo.toml  extension.wasm  start_hello.wasm
src/: document.rs  editor.rs  extension.rs  filetype.rs  host-functions.rs  hostFunctions.rs  lib.rs  main.rs  row.rs  terminal.rs  wavi.rs
src/extension-examples/: Cargo.toml
