[package]
name = "wavi"
version = "0.1.0"
authors = ["Taisei Nakajima <ne300085@senshu-u.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5.6"
unicode-segmentation = "1.7.1"
wasmtime = "0.29.0"
wasmtime-wasi = "0.29.0"
